# RuijieWarrantyQuery

./: .gitignore  CHANGELOG.md  LICENSE-CN  README.md  RELEASE_NOTES_v2.0.0.md  Serial-Number.xlsx  config.example.ini  main.py  pyproject.toml  requirements.txt  ruijie_query_plan.md
ruijie_query/: __init__.py  app.py  captcha_solver.py  config.py  data.py  page_objects.py  webdriver_manager.py
src/ruijie_query/: __init__.py
src/ruijie_query/browser/: __init__.py  webdriver_manager.py
src/ruijie_query/browser/page_objects/: __init__.py  ruijie_page.py
src/ruijie_query/captcha/: __init__.py  captcha_solver.py
src/ruijie_query/config/: __init__.py  config.py  constants.py
src/ruijie_query/core/: __init__.py  app.py  data_manager.py
src/ruijie_query/monitoring/: __init__.py  performance_monitor.py
src/ruijie_query/utils/: __init__.py  helpers.py
tests/: README.md  conftest.py
tests/integration/: test_full_workflow.py
tests/unit/: test_app.py  test_captcha_solver.py  test_config_manager.py  test_data_manager.py  test_performance_monitor.py  test_webdriver_manager.py
